:sparkles: Feat 让标题居中

--- a/themes/am_template.scss
+++ b/themes/am_template.scss
@@ -1670,7 +1670,11 @@ section.hugetext pre {
   font-size: 120%;
 }
 
-
+section.center-title {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
 
 
